fix ship select for panther clipper mk2

--- a/application/src/main/resources/css/compiled/colorblind.css
+++ b/application/src/main/resources/css/compiled/colorblind.css
@@ -1206,9 +1206,9 @@
         -fx-pref-width: 8em;
         -fx-max-width: 8em; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .ship-selection .ship-select-view .col-slot-hardpoints {
-        -fx-min-width: 9em;
-        -fx-pref-width: 9em;
-        -fx-max-width: 9em; }
+        -fx-min-width: 10em;
+        -fx-pref-width: 10em;
+        -fx-max-width: 10em; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .ship-selection .ship-select-view .col-slot-utility {
         -fx-min-width: 5em;
         -fx-pref-width: 5em;
@@ -1310,7 +1310,9 @@
         -fx-border-insets: 0.1em;
         -fx-background-insets: 0.1em; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .shipbuilder-slots-slotbox-military {
-        -fx-background-color: linear-gradient(from 0px 0px to 10px 10px, repeat, #0f0f0f 0%, #1f1f1f 25%, #0f0f0f 50%, #1f1f1f 75%); }
+        -fx-background-color: linear-gradient(from 0px 0px to 10px 10px, repeat, #0f0f0f 0%, #1f1f1f 25%, #0f0f0f 50%, #1f1f1f 75%, #0f0f0f 100%); }
+      .app .application-screen .horizons-tab-content .shipbuilder-tab-content .shipbuilder-slots-slotbox-cargo {
+        -fx-background-color: linear-gradient(from 0px 10px to 10px 0px, repeat, #0f0f0f 0%, #1f1f1f 25%, #0f0f0f 50%, #1f1f1f 75%, #0f0f0f 100%); }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .shipbuilder-slots-slotbox-military .button {
         -fx-background-color: transparent; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .shipbuilder-slots-slotbox-label-normal {
@@ -1524,9 +1526,9 @@
         -fx-max-width: 6em;
         -fx-pref-width: 6em; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .ship-view-header-slot-hardpoints {
-        -fx-min-width: 9em;
-        -fx-max-width: 9em;
-        -fx-pref-width: 9em; }
+        -fx-min-width: 10em;
+        -fx-max-width: 10em;
+        -fx-pref-width: 10em; }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .ship-view-header-slot-utility {
         -fx-min-width: 5em;
         -fx-max-width: 5em;
@@ -1621,7 +1623,7 @@
         -fx-max-height: 1.4em;
         -fx-min-width: 1.5em;
         -fx-min-height: 1.4em;
-        -fx-background-color: #0f0f0f;
+        -fx-background-color: transparent;
         /*-fx-border-width: 0;*/ }
       .app .application-screen .horizons-tab-content .shipbuilder-tab-content .shipbuilder-slots-slotbox-size-text {
         -fx-max-width: 1.5em;
